Fix platform wrapper anchor link icon spacing

--- a/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
+++ b/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
@@ -11,6 +11,12 @@
     margin-top: 0;
   }
 
+  a {
+    .icon {
+      padding-left: $pad-small;
+    }
+  }
+
   .body-wrap {
     padding: 0;
   }
